TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/libtiepieloader.h


extern LibTiePieGenHasOffset_t GenHasOffset;

extern LibTiePieGenHasOffsetEx_t GenHasOffsetEx;

extern LibTiePieGenGetOffsetMin_t GenGetOffsetMin;

extern LibTiePieGenGetOffsetMax_t GenGetOffsetMax;

extern LibTiePieGenGetOffsetMinMaxEx_t GenGetOffsetMinMaxEx;

extern LibTiePieGenGetOffset_t GenGetOffset;

extern LibTiePieGenSetOffset_t GenSetOffset;

extern LibTiePieGenVerifyOffset_t GenVerifyOffset;

extern LibTiePieGenVerifyOffsetEx_t GenVerifyOffsetEx;

extern LibTiePieGenGetFrequencyModes_t GenGetFrequencyModes;

extern LibTiePieGenGetFrequencyModesEx_t GenGetFrequencyModesEx;

extern LibTiePieGenGetFrequencyMode_t GenGetFrequencyMode;

extern LibTiePieGenSetFrequencyMode_t GenSetFrequencyMode;

extern LibTiePieGenHasFrequency_t GenHasFrequency;

extern LibTiePieGenHasFrequencyEx_t GenHasFrequencyEx;

extern LibTiePieGenGetFrequencyMin_t GenGetFrequencyMin;

extern LibTiePieGenGetFrequencyMax_t GenGetFrequencyMax;

extern LibTiePieGenGetFrequencyMinMax_t GenGetFrequencyMinMax;

extern LibTiePieGenGetFrequencyMinMaxEx_t GenGetFrequencyMinMaxEx;

extern LibTiePieGenGetFrequency_t GenGetFrequency;

extern LibTiePieGenSetFrequency_t GenSetFrequency;

extern LibTiePieGenVerifyFrequency_t GenVerifyFrequency;

extern LibTiePieGenVerifyFrequencyEx2_t GenVerifyFrequencyEx2;

extern LibTiePieGenHasPhase_t GenHasPhase;

extern LibTiePieGenHasPhaseEx_t GenHasPhaseEx;

extern LibTiePieGenGetPhaseMin_t GenGetPhaseMin;

extern LibTiePieGenGetPhaseMax_t GenGetPhaseMax;

extern LibTiePieGenGetPhaseMinMaxEx_t GenGetPhaseMinMaxEx;

extern LibTiePieGenGetPhase_t GenGetPhase;

extern LibTiePieGenSetPhase_t GenSetPhase;

extern LibTiePieGenVerifyPhase_t GenVerifyPhase;

extern LibTiePieGenVerifyPhaseEx_t GenVerifyPhaseEx;

extern LibTiePieGenHasSymmetry_t GenHasSymmetry;

extern LibTiePieGenHasSymmetryEx_t GenHasSymmetryEx;

extern LibTiePieGenGetSymmetryMin_t GenGetSymmetryMin;

extern LibTiePieGenGetSymmetryMax_t GenGetSymmetryMax;

extern LibTiePieGenGetSymmetryMinMaxEx_t GenGetSymmetryMinMaxEx;

extern LibTiePieGenGetSymmetry_t GenGetSymmetry;

extern LibTiePieGenSetSymmetry_t GenSetSymmetry;

extern LibTiePieGenVerifySymmetry_t GenVerifySymmetry;

extern LibTiePieGenVerifySymmetryEx_t GenVerifySymmetryEx;

extern LibTiePieGenHasWidth_t GenHasWidth;

extern LibTiePieGenHasWidthEx_t GenHasWidthEx;

extern LibTiePieGenGetWidthMin_t GenGetWidthMin;

extern LibTiePieGenGetWidthMax_t GenGetWidthMax;

extern LibTiePieGenGetWidthMinMaxEx_t GenGetWidthMinMaxEx;

extern LibTiePieGenGetWidth_t GenGetWidth;

extern LibTiePieGenSetWidth_t GenSetWidth;

extern LibTiePieGenVerifyWidth_t GenVerifyWidth;

extern LibTiePieGenVerifyWidthEx_t GenVerifyWidthEx;

extern LibTiePieGenHasEdgeTime_t GenHasEdgeTime;

extern LibTiePieGenHasEdgeTimeEx_t GenHasEdgeTimeEx;

extern LibTiePieGenGetLeadingEdgeTimeMin_t GenGetLeadingEdgeTimeMin;

extern LibTiePieGenGetLeadingEdgeTimeMax_t GenGetLeadingEdgeTimeMax;

extern LibTiePieGenGetLeadingEdgeTimeMinMaxEx_t GenGetLeadingEdgeTimeMinMaxEx;

extern LibTiePieGenGetLeadingEdgeTime_t GenGetLeadingEdgeTime;

extern LibTiePieGenSetLeadingEdgeTime_t GenSetLeadingEdgeTime;

extern LibTiePieGenVerifyLeadingEdgeTime_t GenVerifyLeadingEdgeTime;

extern LibTiePieGenVerifyLeadingEdgeTimeEx_t GenVerifyLeadingEdgeTimeEx;

extern LibTiePieGenGetTrailingEdgeTimeMin_t GenGetTrailingEdgeTimeMin;

extern LibTiePieGenGetTrailingEdgeTimeMax_t GenGetTrailingEdgeTimeMax;

extern LibTiePieGenGetTrailingEdgeTimeMinMaxEx_t GenGetTrailingEdgeTimeMinMaxEx;

extern LibTiePieGenGetTrailingEdgeTime_t GenGetTrailingEdgeTime;

extern LibTiePieGenSetTrailingEdgeTime_t GenSetTrailingEdgeTime;

extern LibTiePieGenVerifyTrailingEdgeTime_t GenVerifyTrailingEdgeTime;

extern LibTiePieGenVerifyTrailingEdgeTimeEx_t GenVerifyTrailingEdgeTimeEx;

extern LibTiePieGenHasData_t GenHasData;

extern LibTiePieGenHasDataEx_t GenHasDataEx;

extern LibTiePieGenGetDataLengthMin_t GenGetDataLengthMin;

extern LibTiePieGenGetDataLengthMax_t GenGetDataLengthMax;

extern LibTiePieGenGetDataLengthMinMaxEx_t GenGetDataLengthMinMaxEx;

extern LibTiePieGenGetDataLength_t GenGetDataLength;

extern LibTiePieGenVerifyDataLength_t GenVerifyDataLength;

extern LibTiePieGenVerifyDataLengthEx_t GenVerifyDataLengthEx;

extern LibTiePieGenSetData_t GenSetData;

extern LibTiePieGenSetDataEx_t GenSetDataEx;

extern LibTiePieGenGetDataRawType_t GenGetDataRawType;

extern LibTiePieGenGetDataRawValueRange_t GenGetDataRawValueRange;

extern LibTiePieGenGetDataRawValueMin_t GenGetDataRawValueMin;

extern LibTiePieGenGetDataRawValueZero_t GenGetDataRawValueZero;

extern LibTiePieGenGetDataRawValueMax_t GenGetDataRawValueMax;

extern LibTiePieGenSetDataRaw_t GenSetDataRaw;

extern LibTiePieGenSetDataRawEx_t GenSetDataRawEx;

extern LibTiePieGenGetModes_t GenGetModes;

extern LibTiePieGenGetModesEx_t GenGetModesEx;

extern LibTiePieGenGetModesNative_t GenGetModesNative;

extern LibTiePieGenGetMode_t GenGetMode;

extern LibTiePieGenSetMode_t GenSetMode;

extern LibTiePieGenIsBurstActive_t GenIsBurstActive;

extern LibTiePieGenGetBurstCountMin_t GenGetBurstCountMin;

extern LibTiePieGenGetBurstCountMax_t GenGetBurstCountMax;

extern LibTiePieGenGetBurstCountMinMaxEx_t GenGetBurstCountMinMaxEx;

extern LibTiePieGenGetBurstCount_t GenGetBurstCount;

extern LibTiePieGenSetBurstCount_t GenSetBurstCount;

extern LibTiePieGenGetBurstSampleCountMin_t GenGetBurstSampleCountMin;

extern LibTiePieGenGetBurstSampleCountMax_t GenGetBurstSampleCountMax;

extern LibTiePieGenGetBurstSampleCountMinMaxEx_t GenGetBurstSampleCountMinMaxEx;

extern LibTiePieGenGetBurstSampleCount_t GenGetBurstSampleCount;

extern LibTiePieGenSetBurstSampleCount_t GenSetBurstSampleCount;

extern LibTiePieGenGetBurstSegmentCountMin_t GenGetBurstSegmentCountMin;

extern LibTiePieGenGetBurstSegmentCountMax_t GenGetBurstSegmentCountMax;

extern LibTiePieGenGetBurstSegmentCountMinMaxEx_t GenGetBurstSegmentCountMinMaxEx;

extern LibTiePieGenGetBurstSegmentCount_t GenGetBurstSegmentCount;

extern LibTiePieGenSetBurstSegmentCount_t GenSetBurstSegmentCount;

extern LibTiePieGenVerifyBurstSegmentCount_t GenVerifyBurstSegmentCount;

extern LibTiePieGenVerifyBurstSegmentCountEx_t GenVerifyBurstSegmentCountEx;

extern LibTiePieGenSetCallbackBurstCompleted_t GenSetCallbackBurstCompleted;
extern LibTiePieGenSetEventBurstCompleted_t GenSetEventBurstCompleted;
extern LibTiePieGenSetEventBurstCompleted_t GenSetEventBurstCompleted;

extern LibTiePieGenSetMessageBurstCompleted_t GenSetMessageBurstCompleted;
extern LibTiePieGenSetCallbackControllableChanged_t GenSetCallbackControllableChanged;
extern LibTiePieGenSetEventControllableChanged_t GenSetEventControllableChanged;
extern LibTiePieGenSetEventControllableChanged_t GenSetEventControllableChanged;

extern LibTiePieGenSetMessageControllableChanged_t GenSetMessageControllableChanged;
extern LibTiePieI2CIsInternalAddress_t I2CIsInternalAddress;