TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/LibTiePie.pas

function GenHasOffset( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenHasOffsetEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ) : ByteBool; cdecl;
function GenGetOffsetMin( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenGetOffsetMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
procedure GenGetOffsetMinMaxEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ; pMin , pMax : PDouble ); cdecl;
function GenGetOffset( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenSetOffset( hDevice : TLibTiePieHandle ; dOffset : Double ) : Double; cdecl;
function GenVerifyOffset( hDevice : TLibTiePieHandle ; dOffset : Double ) : Double; cdecl;
function GenVerifyOffsetEx( hDevice : TLibTiePieHandle ; dOffset : Double ; dwSignalType : LongWord ; dAmplitude : Double ) : Double; cdecl;
function GenGetFrequencyModes( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function GenGetFrequencyModesEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ) : LongWord; cdecl;
function GenGetFrequencyMode( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
function GenSetFrequencyMode( hDevice : TLibTiePieHandle ; dwFrequencyMode : LongWord ) : LongWord; cdecl;
function GenHasFrequency( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenHasFrequencyEx( hDevice : TLibTiePieHandle ; dwFrequencyMode , dwSignalType : LongWord ) : ByteBool; cdecl;
function GenGetFrequencyMin( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenGetFrequencyMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
procedure GenGetFrequencyMinMax( hDevice : TLibTiePieHandle ; dwFrequencyMode : LongWord ; pMin , pMax : PDouble ); cdecl;
procedure GenGetFrequencyMinMaxEx( hDevice : TLibTiePieHandle ; dwFrequencyMode , dwSignalType : LongWord ; pMin , pMax : PDouble ); cdecl;
function GenGetFrequency( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenSetFrequency( hDevice : TLibTiePieHandle ; dFrequency : Double ) : Double; cdecl;
function GenVerifyFrequency( hDevice : TLibTiePieHandle ; dFrequency : Double ) : Double; cdecl;
function GenVerifyFrequencyEx2( hDevice : TLibTiePieHandle ; dFrequency : Double ; dwFrequencyMode , dwSignalType : LongWord ; qwDataLength : UInt64 ; dWidth : Double ) : Double; cdecl;
function GenHasPhase( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenHasPhaseEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ) : ByteBool; cdecl;
function GenGetPhaseMin( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenGetPhaseMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
procedure GenGetPhaseMinMaxEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ; pMin , pMax : PDouble ); cdecl;
function GenGetPhase( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenSetPhase( hDevice : TLibTiePieHandle ; dPhase : Double ) : Double; cdecl;
function GenVerifyPhase( hDevice : TLibTiePieHandle ; dPhase : Double ) : Double; cdecl;
function GenVerifyPhaseEx( hDevice : TLibTiePieHandle ; dPhase : Double ; dwSignalType : LongWord ) : Double; cdecl;
function GenHasSymmetry( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenHasSymmetryEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ) : ByteBool; cdecl;
function GenGetSymmetryMin( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenGetSymmetryMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
procedure GenGetSymmetryMinMaxEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ; pMin , pMax : PDouble ); cdecl;
function GenGetSymmetry( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenSetSymmetry( hDevice : TLibTiePieHandle ; dSymmetry : Double ) : Double; cdecl;
function GenVerifySymmetry( hDevice : TLibTiePieHandle ; dSymmetry : Double ) : Double; cdecl;
function GenVerifySymmetryEx( hDevice : TLibTiePieHandle ; dSymmetry : Double ; dwSignalType : LongWord ) : Double; cdecl;
function GenHasWidth( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenHasWidthEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ) : ByteBool; cdecl;
function GenGetWidthMin( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenGetWidthMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
procedure GenGetWidthMinMaxEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ; dSignalFrequency : Double ; pMin , pMax : PDouble ); cdecl;
function GenGetWidth( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenSetWidth( hDevice : TLibTiePieHandle ; dWidth : Double ) : Double; cdecl;
function GenVerifyWidth( hDevice : TLibTiePieHandle ; dWidth : Double ) : Double; cdecl;
function GenVerifyWidthEx( hDevice : TLibTiePieHandle ; dWidth : Double ; dwSignalType : LongWord ; dSignalFrequency : Double ) : Double; cdecl;
function GenHasEdgeTime( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenHasEdgeTimeEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ) : ByteBool; cdecl;
function GenGetLeadingEdgeTimeMin( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenGetLeadingEdgeTimeMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
procedure GenGetLeadingEdgeTimeMinMaxEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ; dSignalFrequency , dSymmetry , dWidth , dTrailingEdgeTime : Double ; pMin , pMax : PDouble ); cdecl;
function GenGetLeadingEdgeTime( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenSetLeadingEdgeTime( hDevice : TLibTiePieHandle ; dLeadingEdgeTime : Double ) : Double; cdecl;
function GenVerifyLeadingEdgeTime( hDevice : TLibTiePieHandle ; dLeadingEdgeTime : Double ) : Double; cdecl;
function GenVerifyLeadingEdgeTimeEx( hDevice : TLibTiePieHandle ; dLeadingEdgeTime : Double ; dwSignalType : LongWord ; dSignalFrequency , dSymmetry , dWidth , dTrailingEdgeTime : Double ) : Double; cdecl;
function GenGetTrailingEdgeTimeMin( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenGetTrailingEdgeTimeMax( hDevice : TLibTiePieHandle ) : Double; cdecl;
procedure GenGetTrailingEdgeTimeMinMaxEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ; dSignalFrequency , dSymmetry , dWidth , dLeadingEdgeTime : Double ; pMin , pMax : PDouble ); cdecl;
function GenGetTrailingEdgeTime( hDevice : TLibTiePieHandle ) : Double; cdecl;
function GenSetTrailingEdgeTime( hDevice : TLibTiePieHandle ; dTrailingEdgeTime : Double ) : Double; cdecl;
function GenVerifyTrailingEdgeTime( hDevice : TLibTiePieHandle ; dTrailingEdgeTime : Double ) : Double; cdecl;
function GenVerifyTrailingEdgeTimeEx( hDevice : TLibTiePieHandle ; dTrailingEdgeTime : Double ; dwSignalType : LongWord ; dSignalFrequency , dSymmetry , dWidth , dLeadingEdgeTime : Double ) : Double; cdecl;
function GenHasData( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenHasDataEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ) : ByteBool; cdecl;
function GenGetDataLengthMin( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function GenGetDataLengthMax( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
procedure GenGetDataLengthMinMaxEx( hDevice : TLibTiePieHandle ; dwSignalType : LongWord ; pMin , pMax : PUInt64 ); cdecl;
function GenGetDataLength( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function GenVerifyDataLength( hDevice : TLibTiePieHandle ; qwDataLength : UInt64 ) : UInt64; cdecl;
function GenVerifyDataLengthEx( hDevice : TLibTiePieHandle ; qwDataLength : UInt64 ; dwSignalType : LongWord ) : UInt64; cdecl;
procedure GenSetData( hDevice : TLibTiePieHandle ; pBuffer : PSingle ; qwSampleCount : UInt64 ); cdecl;
procedure GenSetDataEx( hDevice : TLibTiePieHandle ; pBuffer : PSingle ; qwSampleCount : UInt64 ; dwSignalType , dwReserved : LongWord ); cdecl;
function GenGetDataRawType( hDevice : TLibTiePieHandle ) : LongWord; cdecl;
procedure GenGetDataRawValueRange( hDevice : TLibTiePieHandle ; pMin , pZero , pMax : PInt64 ); cdecl;
function GenGetDataRawValueMin( hDevice : TLibTiePieHandle ) : Int64; cdecl;
function GenGetDataRawValueZero( hDevice : TLibTiePieHandle ) : Int64; cdecl;
function GenGetDataRawValueMax( hDevice : TLibTiePieHandle ) : Int64; cdecl;
procedure GenSetDataRaw( hDevice : TLibTiePieHandle ; pBuffer : Pointer ; qwSampleCount : UInt64 ); cdecl;
procedure GenSetDataRawEx( hDevice : TLibTiePieHandle ; pBuffer : Pointer ; qwSampleCount : UInt64 ; dwSignalType , dwReserved : LongWord ); cdecl;
function GenGetModes( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function GenGetModesEx( hDevice : TLibTiePieHandle ; dwSignalType , dwFrequencyMode : LongWord ) : UInt64; cdecl;
function GenGetModesNative( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function GenGetMode( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function GenSetMode( hDevice : TLibTiePieHandle ; qwGeneratorMode : UInt64 ) : UInt64; cdecl;
function GenIsBurstActive( hDevice : TLibTiePieHandle ) : ByteBool; cdecl;
function GenGetBurstCountMin( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function GenGetBurstCountMax( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
procedure GenGetBurstCountMinMaxEx( hDevice : TLibTiePieHandle ; qwGeneratorMode : UInt64 ; pMin , pMax : PUInt64 ); cdecl;
function GenGetBurstCount( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function GenSetBurstCount( hDevice : TLibTiePieHandle ; qwBurstCount : UInt64 ) : UInt64; cdecl;
function GenGetBurstSampleCountMin( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function GenGetBurstSampleCountMax( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
procedure GenGetBurstSampleCountMinMaxEx( hDevice : TLibTiePieHandle ; qwGeneratorMode : UInt64 ; pMin , pMax : PUInt64 ); cdecl;
function GenGetBurstSampleCount( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function GenSetBurstSampleCount( hDevice : TLibTiePieHandle ; qwBurstSampleCount : UInt64 ) : UInt64; cdecl;
function GenGetBurstSegmentCountMin( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function GenGetBurstSegmentCountMax( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
procedure GenGetBurstSegmentCountMinMaxEx( hDevice : TLibTiePieHandle ; qwGeneratorMode : UInt64 ; dwSignalType , dwFrequencyMode : LongWord ; dFrequency : Double ; qwDataLength : UInt64 ; pMin , pMax : PUInt64 ); cdecl;
function GenGetBurstSegmentCount( hDevice : TLibTiePieHandle ) : UInt64; cdecl;
function GenSetBurstSegmentCount( hDevice : TLibTiePieHandle ; qwBurstSegmentCount : UInt64 ) : UInt64; cdecl;
function GenVerifyBurstSegmentCount( hDevice : TLibTiePieHandle ; qwBurstSegmentCount : UInt64 ) : UInt64; cdecl;
function GenVerifyBurstSegmentCountEx( hDevice : TLibTiePieHandle ; qwBurstSegmentCount , qwGeneratorMode : UInt64 ; dwSignalType , dwFrequencyMode : LongWord ; dFrequency : Double ; qwDataLength : UInt64 ) : UInt64; cdecl;
procedure GenSetCallbackBurstCompleted( hDevice : TLibTiePieHandle ; pCallback : TTpCallback ; pData : Pointer ); cdecl;
{$ifdef LINUX}
procedure GenSetEventBurstCompleted( hDevice : TLibTiePieHandle ; fdEvent : Integer ); cdecl; deprecated;
{$endif LINUX}
{$ifdef MSWINDOWS}
procedure GenSetEventBurstCompleted( hDevice : TLibTiePieHandle ; hEvent : THandle ); cdecl; deprecated;
procedure GenSetMessageBurstCompleted( hDevice : TLibTiePieHandle ; hWnd : HWND ; wParam : WPARAM ; lParam : LPARAM ); cdecl; deprecated;
{$endif MSWINDOWS}
procedure GenSetCallbackControllableChanged( hDevice : TLibTiePieHandle ; pCallback : TTpCallback ; pData : Pointer ); cdecl;
{$ifdef LINUX}
procedure GenSetEventControllableChanged( hDevice : TLibTiePieHandle ; fdEvent : Integer ); cdecl; deprecated;
{$endif LINUX}
{$ifdef MSWINDOWS}
procedure GenSetEventControllableChanged( hDevice : TLibTiePieHandle ; hEvent : THandle ); cdecl; deprecated;
procedure GenSetMessageControllableChanged( hDevice : TLibTiePieHandle ; hWnd : HWND ; wParam : WPARAM ; lParam : LPARAM ); cdecl; deprecated;
{$endif MSWINDOWS}
function I2CIsInternalAddress( hDevice : TLibTiePieHandle ; wAddress : Word ) : ByteBool; cdecl;
